backend/vulnerability_analysis/testing/hof1/full/klee-out-0/test000002.ptr.err
Error: memory error: out of bound pointer
File: libc/string/strcpy.c
Line: 27
assembly.ll line: 12294
State: 1
Stack: 
	#000012294 in strcpy(139426248261632, 139186803834880) at libc/string/strcpy.c:27
	#100008122 in authenticate() at final_tc/heap_buff_overflow_klee.c:34
	#200008404 in __klee_posix_wrapped_main() at final_tc/heap_buff_overflow_klee.c:53
	#300006117 in __user_main(1, 140389931548672, 140389931548688) at src/runtime/POSIX/klee_init_env.c:245
	#400000571 in __uClibc_main(140374152577024, 1, 140389931548672, 0, 0, 0, 0) at libc/misc/internals/__uClibc_main.c:401
	#500000736 in main(1, 140389931548672)
Info: 
	address: 139426248261640
	next: object at 139144391032832 of size 4
		MO7647[4] allocated at __klee_posix_wrapped_main():  %1 = alloca i32, align 4
